[package]
name = "draft_push"
version = "0.1.0"
authors = ["Behxhet Sadiku <bensadiku65@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
clap = "~2.27.0"
azure_rs = "0.2.0"

[dev-dependencies]
futures = "0.3"
