[package]
name = "draft_push"
version = "0.2.1"
authors = ["Behxhet Sadiku <bensadiku65@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = "~2.27.0"
azure_rs = "0.3"

[dev-dependencies]
futures = "0.3"
dotenv = "0.15.0"